Mon Feb 24 09:17:14 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/tests/Trading/run_test.pl:
          Shorten wait times, test really runs quickly, so the default
          start times should be enough

Sun Feb 23 19:05:17 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Strategies/OC_Endpoint_Selector_Loader.cpp:
        * tao/Strategies/advanced_resource.h:
          Layout changes

        * tests/Bug_3598a_Regression/ClientRequest_Interceptor.cpp:
        * tests/Bug_3598a_Regression/client.cpp:
        * tests/Bug_3598a_Regression/run_test.pl:
        * tests/Bug_3598a_Regression/server.cpp:
          Test always fails on windows, the error is from
          the server that doesn't link the strategies library, but
          does read in the svc.conf file. Reimplemented part of the client
          to cleanly shutdown the ORB so that we don't get valgrind
          reported leads

Sun Feb 23 18:27:00 UTC 2014  Phil Mesnier  <mesnier_p@socket.net>

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:
          Another refactor fix to keep working on non-windows.

Sun Feb 23 02:10:34 UTC 2014  Phil Mesnier  <mesnier_p@local>

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:
          Missed part of the fix for windows support for kill.

Fri Feb 21 19:08:58 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:
          make sure the kill command works on windows too.

        * orbsvcs/tests/ImplRepo/kill_slow_server/run_test.pl:
          clean up the test a bit more.

Fri Feb 21 11:01:28 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Load_Average_Monitor.cpp:
          Implement retrieval of cpu load avarage on windows

        * orbsvcs/orbsvcs/LoadBalancing/LB_CPU_Utilization_Monitor.cpp:
          Initialize pointer with 0

        * orbsvcs/orbsvcs/LoadBalancing/LB_Pull_Handler.cpp: